style(vscode): 简化配置